--- a/releng/org.eclipse.papyrus.information.modeling.rcp/plugin_customization.ini
+++ b/releng/org.eclipse.papyrus.information.modeling.rcp/plugin_customization.ini
@@ -23,3 +23,32 @@ org.eclipse.ui/SHOW_PROGRESS_ON_STARTUP=true
 org.eclipse.papyrus.infra.viewpoints.policy/papyrusViewpointsConfigurationType=extension
 org.eclipse.papyrus.infra.viewpoints.policy/papyrusViewpointsSelectedStakeholder=Modeler
 org.eclipse.papyrus.infra.viewpoints.policy/papyrusViewpointsSelectedViewpoint=Information Modeling Viewpoint
+
+# Set the default resolution scope
+org.eclipse.emf.compare.ide.ui/org.eclipse.emf.compare.ide.ui.preference.resolutionScope=WORKSPACE
+
+#
+# Universal Intro Pages
+#
+
+# Show Intro
+org.eclipse.ui/showIntro=true 
+
+# a comma-separated list of root page identifiers that should be visible in the home page
+# possible values: overview,firststeps,tutorials,samples,whatsnew,migrate,webresources
+org.eclipse.ui.intro.universal/INTRO_ROOT_PAGES=overview,tutorials,samples,whatsnew,migrate
+
+# a file name pointing at the XML file with the page layout settings (see more about this below). The file name relative to the product bundle must have 'product:' prefix.
+org.eclipse.ui.intro.universal/INTRO_DATA=product:welcome/introData.xml
+
+# a unique identifier of the presentation theme to be used for this product. Note that this preference comes from 'org.eclipse.ui.intro plug-in' because active theme selection is performed at the framework level.
+org.eclipse.ui.intro/INTRO_THEME=org.eclipse.ui.intro.universal.solstice
+
+# the id of the page which will be shown when Eclipse starts the first time.
+# org.eclipse.ui.intro/INTRO_START_PAGE=
+
+# the id of the page which will be shown when the home button is pressed.
+# org.eclipse.ui.intro/INTRO_HOME_PAGE=
+
+# the id of the page which will be shown when welcome is displayed in a non-maximized form.
+# org.eclipse.ui.intro/INTRO_STANDBY_PAGE=
