--- a/plugins/org.eclipse.papyrus.information.modeling.ui/pom.xml
+++ b/plugins/org.eclipse.papyrus.information.modeling.ui/pom.xml
@@ -4,11 +4,10 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.eclipse.papyrus.information.modeling</groupId>
-		<artifactId>org.eclipse.papyrus.information.modeling.releng</artifactId>
+		<artifactId>org.eclipse.papyrus.information.modeling.parent</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>org.eclipse.papyrus.information.modeling.feature</artifactId>
-	<packaging>eclipse-feature</packaging>
-	<name>org.eclipse.papyrus.information.modeling.feature</name>
-	<description>This plugin gather all Information Modeling plugins to define a fully functional DSML editor.</description>
+	<groupId>org.eclipse.papyrus</groupId>
+	<artifactId>org.eclipse.papyrus.information.modeling.ui</artifactId>
+	<packaging>eclipse-plugin</packaging>
 </project>
