--- a/releng/org.eclipse.papyrus.information.modeling.dependency.feature/pom.xml
+++ b/releng/org.eclipse.papyrus.information.modeling.dependency.feature/pom.xml
@@ -7,8 +7,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 		<artifactId>org.eclipse.papyrus.information.modeling.releng</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>org.eclipse.papyrus.information.modeling.feature</artifactId>
+	<artifactId>org.eclipse.papyrus.information.modeling.dependency.feature</artifactId>
 	<packaging>eclipse-feature</packaging>
-	<name>org.eclipse.papyrus.information.modeling.feature</name>
-	<description>This plugin gather all Information Modeling plugins to define a fully functional DSML editor.</description>
+	<name>org.eclipse.papyrus.information.modeling.dependency.feature</name>
 </project>
