Fix Travis CI build
Signed-off-by: Philip Langer <planger@eclipsesource.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
-script: mvn clean install -Pproduct
 language: java
-sudo: false
+jdk:
+  - oraclejdk8
+
+before_script:
+  - cd org.eclipse.e4.tutorial.contacts.build.tycho
+
+script: mvn clean install -Pproduct
