--- a/plugins/org.eclipse.papyrus.information.modeling.wizards/pom.xml
+++ b/plugins/org.eclipse.papyrus.information.modeling.wizards/pom.xml
@@ -6,6 +6,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 		<groupId>org.eclipse.papyrus.information.modeling</groupId>
 		<artifactId>org.eclipse.papyrus.information.modeling.parent</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
+		<relativePath>../../</relativePath>
 	</parent>
 	<groupId>org.eclipse.papyrus</groupId>
 	<artifactId>org.eclipse.papyrus.information.modeling.wizards</artifactId>
