--- a/releng/org.eclipse.papyrus.information.modeling.rcp/plugin_customization.ini
+++ b/releng/org.eclipse.papyrus.information.modeling.rcp/plugin_customization.ini
@@ -24,8 +24,10 @@ org.eclipse.papyrus.infra.viewpoints.policy/papyrusViewpointsConfigurationType=e
 org.eclipse.papyrus.infra.viewpoints.policy/papyrusViewpointsSelectedStakeholder=Modeler
 org.eclipse.papyrus.infra.viewpoints.policy/papyrusViewpointsSelectedViewpoint=Information Modeling Viewpoint
 
-# Set the default resolution scope
+# Configure collaborative modeling preferences
 org.eclipse.emf.compare.ide.ui/org.eclipse.emf.compare.ide.ui.preference.resolutionScope=WORKSPACE
+org.eclipse.egit.ui/enable_logical_model=true
+org.eclipse.egit.core/core_preferredMergeStrategy=model recursive
 
 #
 # Universal Intro Pages
