Split context menu into child and relationship, adapt viewpoint CSS
Signed-off-by: Martin Fleck <mfleck@eclipsesource.com>

--- a/plugins/org.eclipse.papyrus.information.modeling.core/plugin.xml
+++ b/plugins/org.eclipse.papyrus.information.modeling.core/plugin.xml
@@ -36,6 +36,9 @@
       <menuCreationModel
             model="resource/newchild/IMNewChild.creationmenumodel">
       </menuCreationModel>
+      <menuCreationModel
+            model="resource/newchild/IMNewEdge.creationmenumodel">
+      </menuCreationModel>
    </extension>
 
 </plugin>
