Style diagrams and switch from theme to viewpoint style
Signed-off-by: Martin Fleck <mfleck@eclipsesource.com>

--- a/releng/org.eclipse.papyrus.information.modeling.rcp/plugin_customization.ini
+++ b/releng/org.eclipse.papyrus.information.modeling.rcp/plugin_customization.ini
@@ -21,13 +21,22 @@ org.eclipse.ui/SHOW_PROGRESS_ON_STARTUP=true
 
 # Set the viewpoint default value
 org.eclipse.papyrus.infra.viewpoints.policy/papyrusViewpointsConfigurationType=extension
-org.eclipse.papyrus.infra.viewpoints.policy/papyrusViewpointsSelectedStakeholder=Modeler
+org.eclipse.papyrus.infra.viewpoints.policy/papyrusViewpointsSelectedStakeholder=Information Modeler
 org.eclipse.papyrus.infra.viewpoints.policy/papyrusViewpointsSelectedViewpoint=Information Modeling Viewpoint
 
 # Configure collaborative modeling preferences
 org.eclipse.emf.compare.ide.ui/org.eclipse.emf.compare.ide.ui.preference.resolutionScope=WORKSPACE
 org.eclipse.egit.ui/enable_logical_model=true
 org.eclipse.egit.core/core_preferredMergeStrategy=model recursive
+
+# Deactivate the default NewChild-Menu entries - consider https://bugs.eclipse.org/bugs/show_bug.cgi?id=494728 in the future
+#//UML.creationmenumodel\ -\ org.eclipse.papyrus.uml.modelexplorer_1.2.0.201605181131.jar\!/resource/=false
+#//UMLEdges.creationmenumodel\ -\ org.eclipse.papyrus.uml.modelexplorer_1.2.0.201605181131.jar\!/resource/=false
+#org.eclipse.papyrus.infra.newchild///UML.creationmenumodel\ -\ org.eclipse.papyrus.uml.modelexplorer_1.2.0.201605181131.jar\!/resource/=false
+#org.eclipse.papyrus.infra.newchild///UMLEdges.creationmenumodel\ -\ org.eclipse.papyrus.uml.modelexplorer_1.2.0.201605181131.jar\!/resource/=false
+
+# Set current theme to information modeling theme
+# org.eclipse.papyrus.infra.gmfdiag.css/currentTheme=org.eclipse.papyrus.information.modeling.core.im_theme
 
 #
 # Universal Intro Pages
