Bug 495386 - [InformationModeling] Add welcome page content
- Add branding image to Welcome page
- Welcome page shows Overview, Tutorials and Samples
- Overview: Links to Papyrus Help for overview and UML profiles
- Tutorials: Getting started: Explain views, create project, model
- Samples: Import ProjectManagement example
- Add action to call wizards from welcome page

Change-Id: I9454e342d24edbd0806f8eafda4883f93f5d52ff
Signed-off-by: Martin Fleck <mfleck@eclipsesource.com>

--- a/plugins/org.eclipse.papyrus.information.modeling.intro/extensions/css/overview.properties
+++ b/plugins/org.eclipse.papyrus.information.modeling.intro/extensions/css/overview.properties
@@ -1,2 +1,5 @@
-overview.im-new-project.link-icon = images/papyrus.png
-overview.im-new-project.hover-icon = images/papyrus_hover.png
+overview.im-help-class-diagrams.link-icon = images/papyrus.png
+overview.im-help-class-diagrams.hover-icon = images/papyrus_hover.png
+
+overview.im-help-profiles.link-icon = images/papyrus.png
+overview.im-help-profiles.hover-icon = images/papyrus_hover.png
