--- a/plugins/org.eclipse.papyrus.information.modeling.intro/extensions/css/tutorials.properties
+++ b/plugins/org.eclipse.papyrus.information.modeling.intro/extensions/css/tutorials.properties
@@ -1,2 +1,2 @@
-tutorials.im-hello-world.link-icon = images/papyrus.png
-tutorials.im-hello-world.hover-icon = images/papyrus_hover.png
+tutorials.im-tutorial-getting-started.link-icon = images/papyrus.png
+tutorials.im-tutorial-getting-started.hover-icon = images/papyrus_hover.png
