--- a/releng/org.eclipse.papyrus.information.modeling.rcp/build.properties
+++ b/releng/org.eclipse.papyrus.information.modeling.rcp/build.properties
@@ -4,4 +4,6 @@ bin.includes = META-INF/,\
                splash.bmp,\
                icons/,\
                plugin_customization.ini,\
-               plugin.properties  
+               plugin.properties,\
+               welcome/
+
