--- a/releng/org.eclipse.papyrus.information.modeling.rcp/plugin_customization.ini
+++ b/releng/org.eclipse.papyrus.information.modeling.rcp/plugin_customization.ini
@@ -38,7 +38,7 @@ org.eclipse.ui/showIntro=true
 
 # a comma-separated list of root page identifiers that should be visible in the home page
 # possible values: overview,firststeps,tutorials,samples,whatsnew,migrate,webresources
-org.eclipse.ui.intro.universal/INTRO_ROOT_PAGES=overview,tutorials,samples,whatsnew,migrate
+org.eclipse.ui.intro.universal/INTRO_ROOT_PAGES=overview,tutorials,samples
 
 # a file name pointing at the XML file with the page layout settings (see more about this below). The file name relative to the product bundle must have 'product:' prefix.
 org.eclipse.ui.intro.universal/INTRO_DATA=product:welcome/introData.xml
