--- a/plugins/org.eclipse.papyrus.information.modeling.intro/plugin.properties
+++ b/plugins/org.eclipse.papyrus.information.modeling.intro/plugin.properties
@@ -8,8 +8,17 @@
 # Contributors:
 #     Martin Fleck (EclipseSource) mfleck@eclipsesource.com - initial API and implementation
 ##################################################################################
-Bundle-Name= Papyrus Information Modeling Wizards
-Bundle-Description=This plug-in contains support mechanisms for the user, such as wizards and cheat sheets
+Bundle-Name=Papyrus Information Modeling Introduction
+Bundle-Description=This plug-in contains introduction and support material, such as wizards, help entries, and cheat sheets.
 Bundle-Vendor=Eclipse Modeling Project
 
 Theme.Information.Name = Information Modeling
+
+_UI_ExistingProjectName_message = * {0}
+_UI_ProjectExistsAlready_message = * A project with this name already exists in the workspace. It won't be overwritten. If you want to replace the existing project, you have to delete it and restart this wizard.
+_UI_ProjectDescriptionAndExists_message = {0}\n\n{1}
+_UI_CreatingProjects_message = Creating the projects 
+
+_UI_ProjectPage_title = Information Modeling Example Projects
+_UI_ProjectPage_description = Create the Information Modeling example projects listed below.
+_UI_NoProjectError_message = There are no projects to be installed for this example.
