--- a/releng/org.eclipse.papyrus.information.modeling.rcp/plugin.xml
+++ b/releng/org.eclipse.papyrus.information.modeling.rcp/plugin.xml
@@ -29,7 +29,7 @@
          </property>
          <property
               name="introBrandingImage"
-              value="product:icons/intro-papyrus.png"/>
+              value="product:icons/papyrus_intro.svg"/>
          <property
                name="introTitle"
                value="Welcome to Papyrus Information Modeling">
