Bug 495386 - [InformationModeling] Add welcome page content
- Add branding image to Welcome page
- Welcome page shows Overview, Tutorials and Samples
- Overview: Links to Papyrus Help for overview and UML profiles
- Tutorials: Getting started: Explain views, create project, model
- Samples: Import ProjectManagement example
- Add action to call wizards from welcome page

Change-Id: I9454e342d24edbd0806f8eafda4883f93f5d52ff
Signed-off-by: Martin Fleck <mfleck@eclipsesource.com>

--- a/examples/org.eclipse.papyrus.information.modeling.examples/build.properties
+++ b/examples/org.eclipse.papyrus.information.modeling.examples/build.properties
@@ -1,4 +1,5 @@
 bin.includes = META-INF/,\
                ProjectManagement/,\
                README.md,\
-               plugin.xml
+               plugin.xml,\
+               icons/
