Bug 495385 - Add example model
  - add ProjectManagement example with emf example framework 
(New Other> ProjectManagement)

Change-Id: Icc6d82929d693744622eabd79f337f91af97ee08
Signed-off-by: Philip Langer <planger@eclipsesource.com>

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 		<module>plugins/org.eclipse.papyrus.information.modeling.core</module>
 		<module>plugins/org.eclipse.papyrus.information.modeling.simplifiedui</module>
 		<module>plugins/org.eclipse.papyrus.information.modeling.intro</module>
+		<module>examples/org.eclipse.papyrus.information.modeling.examples</module>
 		<module>releng</module>
 	</modules>
 	<properties>
@@ -271,6 +272,7 @@
 								<plugin id="org.eclipse.wst.common.project.facet.core" />
 								<plugin id="org.eclipse.emf.compare.rcp" />
 								<plugin id="org.eclipse.emf.compare.rcp.ui" />
+								<plugin id="org.eclipse.papyrus.information.modeling.examples" />
 							</excludes>
 						</configuration>
 					</execution>
