Bug 495972 - [InformationModeling] Add about.html to each plug-in
Cleanup and modifications for legal documentation:
- All source files have Copyright and License Notice
- Build distribution has notice.html (SUA) and primary license (EPL)
- Features have SUA as feature license (license.html)
- Features have copy of EPL (epl-v10.html)
- Features have SUA referenced in feature.xml (via feature.properties)
- Feature plug-in has feature blurb in about.properties
- Plug-ins have standard Abouts (about.html)
- Page with download (README.md) has link to SUA with standard wording

Change-Id: I45825acf75fe97a1696101a99ba42f447fe86587
Signed-off-by: Martin Fleck <mfleck@eclipsesource.com>

--- a/examples/org.eclipse.papyrus.information.modeling.examples/plugin.properties
+++ b/examples/org.eclipse.papyrus.information.modeling.examples/plugin.properties
@@ -8,6 +8,6 @@
 # Contributors:
 #     Martin Fleck (EclipseSource) mfleck@eclipsesource.com - initial API and implementation
 ##################################################################################
-Bundle-Name= Papyrus Information Modeling UI Adaptations 
-Bundle-Description=This plug-in contains the adaptations done to the UI for information modeling.
+Bundle-Name=Papyrus Information Modeling Examples
+Bundle-Description=This plug-in contains example models to demonstrate the capabilities of Papyrus Information Modeling.
 Bundle-Vendor=Eclipse Modeling Project
