--- a/plugins/org.eclipse.papyrus.information.modeling.core/build.properties
+++ b/plugins/org.eclipse.papyrus.information.modeling.core/build.properties
@@ -5,4 +5,8 @@ bin.includes = plugin.xml,\
                .,\
                about.html,\
                resource/,\
-               plugin.properties
+               plugin.properties,\
+               about.ini,\
+               about.properties,\
+               icons/
+src.includes = about.html
