--- a/releng/org.eclipse.papyrus.information.modeling.rcp.feature/build.properties
+++ b/releng/org.eclipse.papyrus.information.modeling.rcp.feature/build.properties
@@ -4,3 +4,5 @@ bin.includes = feature.xml,\
                feature.properties
 src.includes = epl-v10.html,\
                license.html
+
+root = file:notice.html,file:epl-v10.html
