--- a/releng/org.eclipse.papyrus.information.modeling.rcp/build.properties
+++ b/releng/org.eclipse.papyrus.information.modeling.rcp/build.properties
@@ -5,5 +5,9 @@ bin.includes = META-INF/,\
                icons/,\
                plugin_customization.ini,\
                plugin.properties,\
-               welcome/
+               welcome/,\
+               about.html,\
+               about.ini,\
+               about.properties
+src.includes = about.html
 
