--- a/examples/org.eclipse.papyrus.information.modeling.examples/build.properties
+++ b/examples/org.eclipse.papyrus.information.modeling.examples/build.properties
@@ -2,4 +2,7 @@ bin.includes = META-INF/,\
                ProjectManagement/,\
                README.md,\
                plugin.xml,\
-               icons/
+               icons/,\
+               about.html,\
+               plugin.properties
+src.includes = about.html
