--- a/plugins/org.eclipse.papyrus.information.modeling.intro/build.properties
+++ b/plugins/org.eclipse.papyrus.information.modeling.intro/build.properties
@@ -6,4 +6,6 @@ bin.includes = META-INF/,\
                plugin.properties,\
                cheatsheet/,\
                extensions/,\
-               images/
+               images/,\
+               about.html
+src.includes = about.html
