--- a/releng/org.eclipse.papyrus.information.modeling.rcp/plugin.properties
+++ b/releng/org.eclipse.papyrus.information.modeling.rcp/plugin.properties
@@ -9,4 +9,5 @@
 #     CEA LIST - initial API and implementation
 ################################################################################
 Bundle-Name=Papyrus Information Modeling RCP
-pluginProvider=Eclipse Modeling Project
+Bundle-Description=This plug-in contains the rich client platform for information modeling.
+Bundle-Vendor=Eclipse Modeling Project
