Bug 495871 - [InformationModeling] Diff viewer doesn't use CSS style
- Circumvent problem by adding theme based on CSS style

Change-Id: I76264ea1ef95d632b0ee96e03fe70a5b71207dfe
Signed-off-by: Martin Fleck <mfleck@eclipsesource.com>

--- a/plugins/org.eclipse.papyrus.information.modeling.core/plugin.xml
+++ b/plugins/org.eclipse.papyrus.information.modeling.core/plugin.xml
@@ -37,5 +37,19 @@
          point="org.eclipse.papyrus.infra.properties.contexts">
 		<context appliedByDefault="true" contextModel="resource/context/IM-UML.ctx" isCustomizable="true"/>
 	</extension>
+   <extension
+         point="org.eclipse.papyrus.infra.gmfdiag.css.theme">
+      <themeDefinition
+            icon="icons/papyrus.png"
+            id="org.eclipse.papyrus.information.modeling.core.css.im_theme"
+            label="Information Modeling">
+      </themeDefinition>
+      <themeContribution
+            id="org.eclipse.papyrus.information.modeling.core.css.im_theme">
+         <stylesheet
+               stylesheetPath="resource/style/im_style.css">
+         </stylesheet>
+      </themeContribution>
+   </extension>
 
 </plugin>
