--- a/releng/org.eclipse.papyrus.information.modeling.rcp/plugin_customization.ini
+++ b/releng/org.eclipse.papyrus.information.modeling.rcp/plugin_customization.ini
@@ -24,6 +24,9 @@ org.eclipse.papyrus.infra.viewpoints.policy/papyrusViewpointsConfigurationType=e
 org.eclipse.papyrus.infra.viewpoints.policy/papyrusViewpointsSelectedStakeholder=Information Modeler
 org.eclipse.papyrus.infra.viewpoints.policy/papyrusViewpointsSelectedViewpoint=Information Modeling Viewpoint
 
+# Set default Papyrus CSS theme (for comparison, bug 495871)
+org.eclipse.papyrus.infra.gmfdiag.css/currentTheme=org.eclipse.papyrus.information.modeling.core.css.im_theme
+
 # Configure collaborative modeling preferences
 org.eclipse.emf.compare.ide.ui/org.eclipse.emf.compare.ide.ui.preference.resolutionScope=WORKSPACE
 org.eclipse.egit.ui/enable_logical_model=true
