Bug 495951 - [InformationModeling] Remove Papyrus table creation configuration wizards
 - filter wizard provided by
org\.eclipse\.papyrus\.customization\.nattableconfiguration\/.*
 (configuration  table wizards)

Change-Id: I5a3d27d627a84593f1f5cf074d654cc0f6d8ead5
Signed-off-by: Benoit Maggi <benoit.maggi@cea.fr>

--- a/plugins/org.eclipse.papyrus.information.modeling.simplifiedui/plugin.xml
+++ b/plugins/org.eclipse.papyrus.information.modeling.simplifiedui/plugin.xml
@@ -229,6 +229,11 @@
       </activityPatternBinding>
       <activityPatternBinding
             activityId="org.eclipse.papyrus.information.modeling.simplifiedui.hidePapyrus"
+            isEqualityPattern="false"
+            pattern="org\.eclipse\.papyrus\.customization\.nattableconfiguration\/.*">
+      </activityPatternBinding>      
+      <activityPatternBinding
+            activityId="org.eclipse.papyrus.information.modeling.simplifiedui.hidePapyrus"
             isEqualityPattern="true"
             pattern="org.eclipse.papyrus.customization.nattableconfiguration/org.eclipse.papyrus.infra.nattable.create.configuration.wizard">
       </activityPatternBinding>
