--- a/plugins/org.eclipse.papyrus.information.modeling.simplifiedui/pom.xml
+++ b/plugins/org.eclipse.papyrus.information.modeling.simplifiedui/pom.xml
@@ -5,7 +5,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 	<parent>
 		<groupId>org.eclipse.papyrus.information.modeling</groupId>
 		<artifactId>org.eclipse.papyrus.information.modeling.parent</artifactId>
-		<version>0.7.0-SNAPSHOT</version>
+		<version>0.7.0</version>
 		<relativePath>../../</relativePath>
 	</parent>
 	<groupId>org.eclipse.papyrus</groupId>
