--- a/releng/org.eclipse.papyrus.information.modeling.product/pom.xml
+++ b/releng/org.eclipse.papyrus.information.modeling.product/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.eclipse.papyrus.information.modeling</groupId>
 		<artifactId>org.eclipse.papyrus.information.modeling.releng</artifactId>
-		<version>0.7.0-SNAPSHOT</version>
+		<version>0.7.0</version>
 	</parent>
 	<artifactId>org.eclipse.papyrus.information.modeling.product</artifactId>
 	<packaging>eclipse-repository</packaging>
