--- a/targetplatform/org.eclipse.papyrus.information.modeling.targetplatform.neon-papyrusnightly/pom.xml
+++ b/targetplatform/org.eclipse.papyrus.information.modeling.targetplatform.neon-papyrusnightly/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>org.eclipse.papyrus.information.modeling.targetplatform</artifactId>
 		<groupId>org.eclipse.papyrus.information.modeling</groupId>
-		<version>0.7.0-SNAPSHOT</version>
+		<version>0.7.0</version>
 	</parent>
 	<artifactId>org.eclipse.papyrus.information.modeling.targetplatform.neon-papyrusnightly</artifactId>
 	<packaging>eclipse-target-definition</packaging>
