--- a/targetplatform/org.eclipse.papyrus.information.modeling.targetplatform.neon/pom.xml
+++ b/targetplatform/org.eclipse.papyrus.information.modeling.targetplatform.neon/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.eclipse.papyrus.information.modeling</groupId>
 		<artifactId>org.eclipse.papyrus.information.modeling.targetplatform</artifactId>
-		<version>0.7.0-SNAPSHOT</version>
+		<version>0.7.0</version>
 	</parent>	
 	<artifactId>org.eclipse.papyrus.information.modeling.targetplatform.neon</artifactId>
 	<packaging>eclipse-target-definition</packaging>
