--- a/releng/org.eclipse.papyrus.information.modeling.rcp/plugin_customization.ini
+++ b/releng/org.eclipse.papyrus.information.modeling.rcp/plugin_customization.ini
@@ -6,6 +6,9 @@
 # "%key" are externalized strings defined in plugin_customization.properties
 # This file does not need to be translated.
 
+# enforce UTF8 by default
+org.eclipse.core.resources/encoding=UTF-8
+
 # Property "org.eclipse.ui/defaultPerspectiveId" controls the 
 # perspective that the workbench opens initially
 org.eclipse.ui/defaultPerspectiveId=org.eclipse.papyrus.infra.core.perspective
