Bug 496938 - [InformationModeling] First release
 - change the version back to 0.7.1.qualifier

Change-Id: I8e46eec9cd6d53968783548668b2d7a8e20e7483
Signed-off-by: Benoit Maggi <benoit.maggi@cea.fr>

--- a/targetplatform/org.eclipse.papyrus.information.modeling.targetplatform.neon/pom.xml
+++ b/targetplatform/org.eclipse.papyrus.information.modeling.targetplatform.neon/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.eclipse.papyrus.information.modeling</groupId>
 		<artifactId>org.eclipse.papyrus.information.modeling.targetplatform</artifactId>
-		<version>0.7.0</version>
+		<version>0.7.1-SNAPSHOT</version>
 	</parent>	
 	<artifactId>org.eclipse.papyrus.information.modeling.targetplatform.neon</artifactId>
 	<packaging>eclipse-target-definition</packaging>
