Bug 497284 - Icon missing white circle in introduction
 - create the icon
 - use the new icon in plugin.xml

Change-Id: I199ea82dda4654716e6179e98f557af5d7a46999
Signed-off-by: Benoit Maggi <benoit.maggi@cea.fr>

--- a/releng/org.eclipse.papyrus.information.modeling.rcp/plugin.xml
+++ b/releng/org.eclipse.papyrus.information.modeling.rcp/plugin.xml
@@ -29,7 +29,7 @@
          </property>
          <property
               name="introBrandingImage"
-              value="product:icons/PapyrusIM.svg"/>
+              value="product:icons/PapyrusIMIntro.svg"/>
          <property
                name="introTitle"
                value="Welcome to Papyrus Information Modeling">
