Bug 495382 - Missing "Open" and "Open With" for plain files
Provide dedicated action provider to restore the 'Open' and 'Open With'
contributions of the JDT action provider hidden by the activities.

Change-Id: I622f6230d0d25fd2890f64551af51360ef8006ab
Signed-off-by: Martin Fleck <mfleck@eclipsesource.com>

--- a/plugins/org.eclipse.papyrus.information.modeling.simplifiedui/plugin.xml
+++ b/plugins/org.eclipse.papyrus.information.modeling.simplifiedui/plugin.xml
@@ -442,4 +442,30 @@
        </hiddenToolBarItem>
     </perspectiveExtension>
  </extension>
+ 
+    <extension
+         point="org.eclipse.ui.navigator.viewer">
+      <viewerActionBinding
+            viewerId="org.eclipse.ui.navigator.ProjectExplorer">
+         <includes>
+            <actionExtension
+                  pattern="org.eclipse.papyrus.information.modeling.simplifiedui.navigator.*">
+            </actionExtension>
+         </includes>
+      </viewerActionBinding>
+   </extension>
+   <extension
+         point="org.eclipse.ui.navigator.navigatorContent">
+      <actionProvider
+            class="org.eclipse.papyrus.information.modeling.simplifiedui.navigator.PackageExplorerOpenActionProvider"
+            id="org.eclipse.papyrus.information.modeling.simplifiedui.navigator.actions.PackageExplorerOpenActionProvider"
+            overrides="org.eclipse.jdt.ui.navigator.actions.OpenActions">
+            <enablement>
+		         <or>
+		            <instanceof 
+		                  	value="org.eclipse.core.resources.IFile" /> 
+		         </or>
+         </enablement>
+      </actionProvider>
+   </extension>
 </plugin>
